# dataworkflow

./: .env.example  .gitignore  .pr-checks.yml.example  DISTRIBUTED_EXECUTION.md  FINAL_SUMMARY.md  OVERHAUL_SUMMARY.md  README.md  UV_SETUP.md  cli.py  pyproject.toml  requirements.txt  runner_cli.py  setup.py  workflow_cli.py
.github/workflows/: test.yml
data/: edges.csv
docs/: DISTRIBUTED_EXECUTION.md  PULL_REQUESTS.md  UV_SETUP.md  WORKFLOWS.md
examples/: distributed_workflow.py  example_workflow.py  transitive_closure.py
scripts/: init_db.py  migrate_add_committed_ref.py  migrate_add_created_by_commit.py  migrate_add_invocation_fields.py  migrate_add_main_branch.py  migrate_add_pr_comments.py  migrate_add_pull_requests.py  migrate_add_stage_logs.py  migrate_add_stages.py  migrate_add_workflows.py  migrate_content_addressable_ids.py  migrate_make_invocation_fields_required.py  migrate_make_workflow_run_id_nullable.py  migrate_remove_workflow_run.py  migrate_stage_files.py  seed_data.py
sdk/: __init__.py  context.py  decorators.py  run_workflows.py  runner.py  subprocess_executor.py  worker.py
src/: __init__.py  app.py  config.py  diff.py
src/core/: __init__.py  path.py  pr_checks_config.py  pull_requests.py  repository.py  stage_operations.py  stage_runs.py  vfs.py  vfs_diff.py  vfs_diff_adapter.py  (+2 more)
tests/: __init__.py  conftest.py  test_basic.py  test_create_workflow_run.py  test_diff.py  test_log_tailing.py  test_repository.py  test_routes.py  test_stage_commit.py  test_vfs.py  test_vfs_diff.py  test_vfs_diff_adapter.py  test_workflow_integration.py
(+83 files in other folders)
